<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Midhun Harikumar
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Message Counter &amp; Backup</string>
    <string name="app_version">Version 4.2.0</string>
    <string name="app_code_name">(Yeti)</string>
    <string name="app_release_date">May 2020</string>
    <string name="app_desc">Message Counter is an open source app that displays useful statistics about your SMS.</string>
    <string name="app_disclaim">Since this app uses Android standard SMS API, it may not produce correct statistics for all devices. Do not use the data displayed by the app as an accurate measure for SMS counts.</string>
    <string name="app_developer_info">Designed, developed at ae app labs</string>

    <string name="empty_text" translatable="false"/>
    <string name="str_zero" translatable="false">0</string>

    <string name="empty_list">No messages found</string>

    <!-- Titles displayed in Bottom Navigation Menu -->
    <string name="title_sent_list">List</string>
    <string name="title_counter">Counter</string>
    <string name="title_ignore">Ignore</string>
    <string name="title_backup">Backup</string>

    <!-- Menu Strings -->
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_donate">Donate</string>
    <string name="menu_title_share">Share this app</string>
    <string name="menu_title_about">About</string>
    <string name="menu_title_license">License</string>

    <!-- Main texts -->
    <string name="str_sent_this_week">Sent this Week</string>

    <!-- added for 2.2.0 -->
    <string name="str_messages_sent">Messages sent</string>
    <string name="str_this_cycle">This cycle</string>
    <string name="str_sent_today">Messages sent today</string>
    <string name="str_cycle_start_date">Cycle start date</string>

    <string name="str_pref_sent_message_count">Sent Message Count</string>
    <string name="str_pref_cycle_start_desc">The start date for each cycle</string>
    <string name="str_pref_message_limit">Message limit</string>
    <string name="str_pref_message_limit_desc">Limit for messages that can be sent per cycle. Default is 100</string>

    <!-- added for 2.2.7 -->
    <string name="str_notify_on_limit">Notify on reaching limit</string>
    <string name="str_current_cycle">CURRENT CYCLE</string>
    <string name="str_previous_cycle">PREVIOUS CYCLE</string>

    <!-- added for 2.3.0 (widgets) -->
    <string name="str_messages_sent_caps">MESSAGES SENT</string>
    <string name="str_today">TODAY</string>
    <string name="str_cycle">CYCLE</string>

    <!-- added for 3.1.0 (donations) -->
    <string name="str_donate_title">Donate</string>
    <string name="str_donate_text">Message Counter is an open source project developed in my spare time. Any sort of contribution helps to add features or swat bugs. Thank you!</string>
    <string name="str_donate_disclaimer">Donations will not be  in lieu of additional features. Google takes 30% of purchases as transaction fees.</string>
    <string name="str_donate_thanks">Thank you for donating!</string>
    <string name="str_donate_fail">Donation failed. Please try again later.</string>
    <string name="str_donate_small">Small Donation</string>
    <string name="str_donate_medium">Medium Donation</string>
    <string name="str_donate_large">Large Donation</string>

    <!-- added for 3.3.0 -->
    <string name="str_ignore_add_number">Add a Number</string>
    <string name="str_ignore_add_to_ignore_list">Add To Ignore List</string>
    <string name="str_ignore_btn_ignore">Ignore</string>
    <string name="str_ignore_name">Name</string>
    <string name="str_ignore_number">Number</string>
    <string name="str_ignore_empty_list">Start by adding a number to ignore</string>

    <!-- v4.0.0 -->
    <string name="loading_list">Counting Messages</string>
    <string name="str_require_permissions_title">Need permissions</string>
    <string name="str_require_permissions_description">Message Counter requires permission for reading SMS and Contacts to function</string>
    <string name="str_require_permissions_request_button">Grant Permissions</string>
    <string name="str_sent_this_year">Sent this Year</string>
    <string name="str_pref_use_background_service">Use background service</string>
    <string name="str_pref_use_background_service_desc">A background service will be used to monitor sent messages</string>
    <string name="str_enable_notify_on_limit">Notify on reaching SMS send limit</string>
    <string name="str_sms_limit_notification_title">SMS Limit Reached</string>
    <string name="str_sms_limit_notification_text">SMS limit reached for this cycle</string>
    <string name="str_contact_message_sent">Sent</string>
    <string name="str_contact_message_received">Received</string>
    <string name="str_about_oss_license">Open Source Licenses</string>
    <string name="str_about_view_source">View Source</string>
    <string name="str_about_view_faq">Frequently Asked Questions</string>
    <string name="str_about_share_feedback">Share Feedback</string>
    <string name="str_about_share_feedback_subject">Feedback for MessageCounter</string>
    <string name="str_about_share_feedback_body" translatable="false">AppVersion 4.2.0, build 411</string>
    <string name="str_info_review_settings_on_first_run">Review your settings</string>
    <string name="str_ignore_number_delete">Delete</string>

    <!-- Added in 4.1.1 since OSS library has an issue -->
    <string name="str_license_desc" translatable="false">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n
http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

    <!-- 4.2.0 -->
    <string name="str_sms_backup_method_name" translatable="false">TOBEREPLACEDLA8R</string>
    <string name="str_sms_backup_btn_backup">Backup Now</string>
    <string name="str_sms_backup_btn_restore">Restore</string>
    <string name="str_sms_backup_title">BACKUP</string>
    <string name="str_sms_backup_schedule_backups">BACKUP SCHEDULE</string>
    <string name="str_sms_backup_schedule_status_none">Not Scheduled</string>
    <string name="str_sms_backup_status">Backup Status : %1$s</string>
    <string name="str_sms_backup_status_none">No backups</string>
    <string name="str_sms_backup_locations">Backing up to : Device</string>
    <string name="str_sms_backup_encryption_note">Messages information is stored internally and encrypted.</string>
</resources>
