<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_title_about"/>
    <item
        android:id="@+id/action_donate"
        android:orderInCategory="150"
        android:icon="@drawable/ic_donate"
        app:showAsAction="never"
        android:title="@string/menu_title_donate"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"
        android:title="@string/menu_title_settings"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="400"
        android:title="@string/menu_title_share"/>
</menu>