<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Midhun Harikumar
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_counter"
        android:enabled="true"
        android:icon="@drawable/nav_icon_message"
        android:title="@string/title_counter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/nav_icon_backup"
        android:title="@string/title_backup"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_ignore"
        android:enabled="true"
        android:icon="@drawable/nav_icon_ignore"
        android:title="@string/title_ignore"
        app:showAsAction="ifRoom" />

    <!--
        <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/nav_icon_list"
        android:title="@string/title_sent_list"
        app:showAsAction="ifRoom" />
    -->
</menu>