<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Midhun Harikumar
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout android:id="@+id/appWidget"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/widget_background"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/unit_s"
        android:gravity="center"
        android:text="@string/str_messages_sent_caps"
        android:textColor="@color/color_white"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_s"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_today"
            android:textColor="@color/color_white"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_s"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/str_cycle"
            android:textColor="@color/color_white"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widgetSentTodayText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_s"
            android:layout_marginTop="@dimen/unit_s"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_zero"
            android:textColor="@color/color_white"/>

        <TextView
            android:id="@+id/widgetSentInCycleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_s"
            android:layout_marginTop="@dimen/unit_s"
            android:layout_weight="1"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/str_zero"
            android:textColor="@color/color_white"/>
    </LinearLayout>

</LinearLayout>